--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-spring.application.name=tommer
+# Database connection
+spring.datasource.url=jdbc:mysql://localhost:3306/workday?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Xcp23bdf7479
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Server port (valgfrit)
+server.port=8080
