rigtig db sat op og små ændringer

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,9 @@ build/
 
 ### VS Code ###
 .vscode/
+.aider*
+
+### Local Spring config (secrets) ###
+**/application-local.properties
+**/application-local.yml
+**/application-local.yaml
