docs: opdater tests, README, schema.sql og Playwright konfiguration
- Opdateret alle tests til at bruge @ActiveProfiles('test') og H2
- Forbedret test setup med automatisk bruger-oprettelse
- Opdateret README med klare instruktioner til clone og kÃ¸rsel
- H2 er nu standard database (ingen setup pÃ¥krÃ¦vet)
- MySQL er valgfri via application-local.properties
- Opdateret schema.sql med bedre dokumentation og foreign keys
- Opdateret application.properties til at bruge H2 som standard
- Forbedret Playwright konfiguration med screenshots og retry
- Opdateret CONTRIBUTING.md med nye test-instruktioner
- TilfÃ¸jet @Profile('!test') til DataInitializer for at undgÃ¥ kÃ¸rsel i tests

--- a/src/main/resources/application-local.properties.example
+++ b/src/main/resources/application-local.properties.example
@@ -1,8 +1,14 @@
 # Copy this file to `./application-local.properties` (project root, ignored by git).
 # Then fill in your local DB credentials (do NOT commit).
+# This will override the default H2 database with MySQL.
 
-DB_HOST=localhost
-DB_PORT=3306
-DB_NAME=workday
+# MySQL configuration
+DB_URL=jdbc:mysql://localhost:3306/workday?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&createDatabaseIfNotExist=true
 DB_USER=root
 DB_PASSWORD=CHANGE_ME
+DB_DRIVER=com.mysql.cj.jdbc.Driver
+DB_DIALECT=org.hibernate.dialect.MySQLDialect
+
+# Optional: Adjust logging
+DB_SHOW_SQL=true
+DB_FORMAT_SQL=true
