--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "workday-e2e",
   "version": "0.1.0",
   "private": true,
+  "description": "E2E tests for Workday using Playwright",
   "devDependencies": {
     "@playwright/test": "^1.43.0"
   },
   "scripts": {
     "playwright:install": "npx playwright install --with-deps",
-    "test:e2e": "npx playwright test"
+    "test:e2e": "npx playwright test",
+    "test:e2e:ui": "npx playwright test --ui",
+    "test:e2e:headed": "npx playwright test --headed"
   }
 }
