--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,17 @@
 spring.config.import=optional:file:./application-local.properties,optional:classpath:application-local.properties
 
-# MySQL (local). You can override with environment variables.
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:workday}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&createDatabaseIfNotExist=true
-spring.datasource.username=${DB_USER:root}
+# Database configuration
+# Default: H2 in-memory (no setup required - perfect for quick start)
+# To use MySQL instead, create application-local.properties (see application-local.properties.example)
+spring.datasource.url=${DB_URL:jdbc:h2:mem:workday;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MySQL}
+spring.datasource.username=${DB_USER:sa}
 spring.datasource.password=${DB_PASSWORD:}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=${DB_DRIVER:org.h2.Driver}
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=${DB_SHOW_SQL:true}
+spring.jpa.properties.hibernate.format_sql=${DB_FORMAT_SQL:true}
+spring.jpa.properties.hibernate.dialect=${DB_DIALECT:org.hibernate.dialect.H2Dialect}
 
 server.port=8080
 spring.servlet.multipart.max-file-size=20MB
