Refactor codebase, fix Spring Boot version, add tests and exception handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,15 @@ spring.jpa.properties.hibernate.dialect=${DB_DIALECT:org.hibernate.dialect.H2Dia
 server.port=8080
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
+
+# Rate Limiting (Bucket4j)
+bucket4j.enabled=false
+bucket4j.filters[0].cache-name=rate-limit-bucket
+bucket4j.filters[0].url=/login
+bucket4j.filters[0].rate-limits[0].bandwidths[0].capacity=20
+bucket4j.filters[0].rate-limits[0].bandwidths[0].time=1
+bucket4j.filters[0].rate-limits[0].bandwidths[0].unit=minutes
+
+# Cache Configuration
+spring.cache.type=caffeine
+spring.cache.cache-names=rate-limit-bucket
