--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,15 +1,2 @@
-# Test profile configuration - uses H2 in-memory database
-spring.profiles.active=test
-
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MySQL
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-
-# Disable DataInitializer in tests (tests create their own test data)
-spring.main.allow-bean-definition-overriding=true
+# Disable Bucket4j in tests to avoid cache issues
+bucket4j.enabled=false
